# template-streamlit-app

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  setup.py
.k8s/: deployment.yml  ingress.yml  service.yml
.streamlit/: config.toml  secrets.toml
src/: main.py  state.py
src/components/: date_pickers.py  foldable_plot.py  footer.py  header.py  selector.py
src/lib/: app.py  authentication.py  component.py  i18n.py  page.py  state.py
src/pages/index/: ui.py
src/pages/sample_page/: ui.py
