[tool.poetry]
name = "template-streamlit-app"
version = "0.1.0"
description = "A template to make Streamlit application fast"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = ">=1.0"
watchdog = "*"
pandas = "==1.3.3"
numpy = "*"
tqdm = "*"
pyarrow = "*"
seaborn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
